[package]
name = "cnctd_dialogue"
version = "0.1.6"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Custom dialog implementation"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_dialogue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dialoguer = "0.11.0"
strum = "0.25.0"
